--- a/octodns/staging/yokishava.dev.yaml
+++ b/octodns/staging/yokishava.dev.yaml
@@ -8,34 +8,17 @@
   - ns-cloud-b3.googledomains.com.
   - ns-cloud-b4.googledomains.com.
 
-# web:
-#   type: A
-#   values:
-#     - 35.190.10.125
-    # - 34.117.199.108
-
 hello:
   type: A
-  # ttl: 300
   values:
     - 199.36.158.100
 
 welcome:
   type: A
-  # ttl: 300
   values:
     - 199.36.158.100
 
-# kind: dns#resourceRecordSet
-# name: hello.yokishava.dev.
-# rrdatas:
-# - 199.36.158.100
-# ttl: 3600
-# type: A
-# ---
-# kind: dns#resourceRecordSet
-# name: welcome.yokishava.dev.
-# rrdatas:
-# - 199.36.158.100
-# ttl: 3600
-# type: A
+world:
+  type: A
+  values:
+    - 199.36.158.100
