--- a/.github/workflows/octodns-preview-staging.yaml
+++ b/.github/workflows/octodns-preview-staging.yaml
@@ -16,7 +16,7 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: '3.10'
-      - run: pip install -r requirements.txt
+      # - run: pip install -r requirements.txt
       - run: echo "$GCLOUD_KEY" > google_cloud_credentials_staging.json
       - uses: solvaholic/octodns-sync@main
         with:
