--- a/octodns/staging/config.yaml
+++ b/octodns/staging/config.yaml
@@ -1,7 +1,7 @@
 manager:
   plan_outputs:
     html:
-      class: octodns.googlecloud.plan.PlanHtml
+      class: octodns.provider.plan.PlanHtml
 
 providers:
   config:
