--- a/.github/workflows/octodns-preview-staging.yaml
+++ b/.github/workflows/octodns-preview-staging.yaml
@@ -23,4 +23,4 @@ jobs:
           config_path: octodns/staging/config.yaml
           add_pr_comment: 'Yes'
           pr_comment_token: '${{ github.token }}'
-          comment_url: 'url'
+          comments_url: 'url'
