--- a/.github/workflows/octodns-preview-staging.yaml
+++ b/.github/workflows/octodns-preview-staging.yaml
@@ -22,5 +22,4 @@ jobs:
         with:
           config_path: octodns/staging/config.yaml
           add_pr_comment: 'Yes'
-          pr_comment_token: '${{ github.token }}'
-          comments_url: 'url'
+          pr_comment_token: ${{ secrets.GITHUB_TOKEN }}
