--- a/.github/workflows/dnscontrol-preview-staging.yaml
+++ b/.github/workflows/dnscontrol-preview-staging.yaml
@@ -3,12 +3,7 @@ name: Preview by DNScontrol
 on:
   pull_request:
     paths:
-      - "dnscontrol/staging/**"
-
-
-defaults:
-  run:
-    working-directory: dnscontrol/staging    
+      - "dnscontrol/staging/**" 
 
 jobs:
   preview:
@@ -19,21 +14,22 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Put creds.json
-        run: echo "$GCLOUD_KEY" > creds.json
+        run: echo "$GCLOUD_KEY" > dnscontrol/staging/creds.json
 
       - name: DNSControl check
         uses: koenrh/dnscontrol-action@v3
         with:
           args: check
-          config_file: 'dnsconfig.js'
+          config_file: 'dnscontrol/staging/dnsconfig.js'
+          creds_file: 'dnscontrol/staging/creds.json'
 
       - name: DNSControl preview
         uses: koenrh/dnscontrol-action@v3
         id: dnscontrol_preview
         with:
           args: preview
-          config_file: 'dnscontrol.js'
-          creds_file: 'creds.json'
+          config_file: 'dnscontrol/staging/dnsconfig.js'
+          creds_file: 'dnscontrol/staging/creds.json'
 
       - name: Preview pull request comment
         uses: unsplash/comment-on-pr@v1.3.0
