--- a/.github/workflows/terraform-plan.yaml
+++ b/.github/workflows/terraform-plan.yaml
@@ -18,7 +18,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: hashicorp/setup-terraform@v2
-      - run: echo "$GCLOUD_KEY" > terraform/gcloud-credential.json
+      - run: echo "$GCLOUD_KEY" > gcloud-credential.json
       - name: Terraform fmt
         id: fmt
         run: terraform fmt -check
