--- a/.github/workflows/terraform-apply.yaml
+++ b/.github/workflows/terraform-apply.yaml
@@ -16,11 +16,10 @@ jobs:
     name: "Apply by Terraform"
     runs-on: ubuntu-latest
     env:
-      GCLOUD_KEY: ${{ secrets.TERRAFORM_GCP_KEY }}
+      GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.TERRAFORM_GCP_KEY }}
     steps:
       - uses: actions/checkout@v3
       - uses: hashicorp/setup-terraform@v2
-      - run: echo "$GCLOUD_KEY" > gcloud-credential.json
       - name: "Terraform Apply"
         id: apply
         run: terraform apply -auto-approve -no-color
