--- a/.github/workflows/terraform-plan.yaml
+++ b/.github/workflows/terraform-plan.yaml
@@ -21,8 +21,8 @@ jobs:
         name: 'Authenticate to Google Cloud'
         uses: 'google-github-actions/auth@v1'
         with:
-          workload_identity_provider: ${{ secrets.WI_PROVIDER }}
-          service_account: ${{ secrets.GCP_SA }}
+          workload_identity_provider: 'projects/279091920414/locations/global/workloadIdentityPools/github-actions-pool/providers/gha-provider'
+          service_account: 'terraform-sa@yokishava-staging.iam.gserviceaccount.com'
 
       - uses: hashicorp/setup-terraform@v2
       - name: Terraform fmt
