--- a/.github/workflows/terraform-apply.yaml
+++ b/.github/workflows/terraform-apply.yaml
@@ -33,6 +33,10 @@ jobs:
           service_account: ${{ secrets.GCP_SA }}
 
       - uses: hashicorp/setup-terraform@v2
+      - name: Terraform Init
+        id: init
+        run: terraform init
+
       - name: "Terraform Apply"
         id: apply
         run: terraform apply -auto-approve -no-color
